--- a/content/resources/mit12_950iap10_hw2.md
+++ b/content/resources/mit12_950iap10_hw2.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: Problem set on on OpenMP (Open Multi-Processing) coding.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/12-950-parallel-programming-for-multicore-machines-using-openmp-and-mpi-january-iap-2010/4a783f4997aec6c1b3983196359f393e_MIT12_950IAP10_hw2.pdf
+file: /media/courses/12-950-parallel-programming-for-multicore-machines-using-openmp-and-mpi-january-iap-2010/4a783f4997aec6c1b3983196359f393e_MIT12_950IAP10_hw2.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: Homework 2
 uid: 4a783f49-97ae-c6c1-b398-3196359f393e
