--- a/content/resources/mit12_950iap10_hw3.md
+++ b/content/resources/mit12_950iap10_hw3.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: Problem set on parallel programming using the Message Passing Interface
   (MPI).
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/12-950-parallel-programming-for-multicore-machines-using-openmp-and-mpi-january-iap-2010/3fc0048cde65f4f97830747947e82a28_MIT12_950IAP10_hw3.pdf
+file: /media/courses/12-950-parallel-programming-for-multicore-machines-using-openmp-and-mpi-january-iap-2010/3fc0048cde65f4f97830747947e82a28_MIT12_950IAP10_hw3.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: Homework 3
 uid: 3fc0048c-de65-f4f9-7830-747947e82a28
