--- a/content/resources/mit12_950iap10_hw5.md
+++ b/content/resources/mit12_950iap10_hw5.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: Problem set on wave equation solvers and hybrid programming.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/12-950-parallel-programming-for-multicore-machines-using-openmp-and-mpi-january-iap-2010/c191fb9962416759450a9af8ac154725_MIT12_950IAP10_hw5.pdf
+file: /media/courses/12-950-parallel-programming-for-multicore-machines-using-openmp-and-mpi-january-iap-2010/c191fb9962416759450a9af8ac154725_MIT12_950IAP10_hw5.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: Homework 5
 uid: c191fb99-6241-6759-450a-9af8ac154725
