Sync all content

--- a/content/resources/mit12_950iap10_hw1.md
+++ b/content/resources/mit12_950iap10_hw1.md
@@ -9,6 +9,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 1ab8d517-bb8e-0933-8180-af65586c56df
 resourcetype: Document
 title: Homework 1
 uid: ede2f608-f6bf-3100-1b94-6b8a8586b556
