--- a/content/resources/mit12_950iap10_hw3.md
+++ b/content/resources/mit12_950iap10_hw3.md
@@ -9,6 +9,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 1ab8d517-bb8e-0933-8180-af65586c56df
 resourcetype: Document
 title: Homework 3
 uid: 3fc0048c-de65-f4f9-7830-747947e82a28
