--- a/content/resources/mit12_950iap10_hw4.md
+++ b/content/resources/mit12_950iap10_hw4.md
@@ -9,6 +9,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 1ab8d517-bb8e-0933-8180-af65586c56df
 resourcetype: Document
 title: Homework 4
 uid: beaac21e-927f-c993-300e-cf81140196ba
