--- a/content/resources/mit12_950iap10_hw5.md
+++ b/content/resources/mit12_950iap10_hw5.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 1ab8d517-bb8e-0933-8180-af65586c56df
 resourcetype: Document
 title: Homework 5
 uid: c191fb99-6241-6759-450a-9af8ac154725
