--- a/content/resources/12-950iap10.md
+++ b/content/resources/12-950iap10.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Mixed Parallel Programming using MPI and OpenMP. (Figure by MIT OpenCourseWare.)
-file: /media/courses/12-950-parallel-programming-for-multicore-machines-using-openmp-and-mpi-january-iap-2010/915021e454921b7e4798d22cf186dbb2_12-950iap10.jpg
+file: /courses/12-950-parallel-programming-for-multicore-machines-using-openmp-and-mpi-january-iap-2010/915021e454921b7e4798d22cf186dbb2_12-950iap10.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Mixed Parallel Programming using MPI and OpenMP. (Figure by MIT OpenCourseWare.)
@@ -12,4 +12,10 @@ ocw_type: OCWImage
 resourcetype: Image
 title: Basic concept of MPI and OpenMP
 uid: 915021e4-5492-1b7e-4798-d22cf186dbb2
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
+Mixed Parallel Programming using MPI and OpenMP. (Figure by MIT OpenCourseWare.)
+
