--- a/content/resources/mit12_950iap10_hw1.md
+++ b/content/resources/mit12_950iap10_hw1.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: "Problem set on OpenMP compilation, runtime en\xADvironment, and code\
   \ examples."
-file: /media/courses/12-950-parallel-programming-for-multicore-machines-using-openmp-and-mpi-january-iap-2010/ede2f608f6bf31001b946b8a8586b556_MIT12_950IAP10_hw1.pdf
+file: /courses/12-950-parallel-programming-for-multicore-machines-using-openmp-and-mpi-january-iap-2010/ede2f608f6bf31001b946b8a8586b556_MIT12_950IAP10_hw1.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
@@ -13,4 +13,10 @@ parent_uid: 1ab8d517-bb8e-0933-8180-af65586c56df
 resourcetype: Document
 title: Homework 1
 uid: ede2f608-f6bf-3100-1b94-6b8a8586b556
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
+Problem set on OpenMP compilation, runtime en­vironment, and code examples.
+
