--- a/content/resources/mit12_950iap10_hw2.md
+++ b/content/resources/mit12_950iap10_hw2.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Problem set on on OpenMP (Open Multi-Processing) coding.
-file: /media/courses/12-950-parallel-programming-for-multicore-machines-using-openmp-and-mpi-january-iap-2010/4a783f4997aec6c1b3983196359f393e_MIT12_950IAP10_hw2.pdf
+file: /courses/12-950-parallel-programming-for-multicore-machines-using-openmp-and-mpi-january-iap-2010/4a783f4997aec6c1b3983196359f393e_MIT12_950IAP10_hw2.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
@@ -12,4 +12,10 @@ parent_uid: 1ab8d517-bb8e-0933-8180-af65586c56df
 resourcetype: Document
 title: Homework 2
 uid: 4a783f49-97ae-c6c1-b398-3196359f393e
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
+Problem set on on OpenMP (Open Multi-Processing) coding.
+
