--- a/content/resources/mit12_950iap10_hw4.md
+++ b/content/resources/mit12_950iap10_hw4.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: Problem set on parallel programming using the Message Passing Interface
   (MPI).
-file: /media/courses/12-950-parallel-programming-for-multicore-machines-using-openmp-and-mpi-january-iap-2010/beaac21e927fc993300ecf81140196ba_MIT12_950IAP10_hw4.pdf
+file: /courses/12-950-parallel-programming-for-multicore-machines-using-openmp-and-mpi-january-iap-2010/beaac21e927fc993300ecf81140196ba_MIT12_950IAP10_hw4.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
@@ -13,4 +13,10 @@ parent_uid: 1ab8d517-bb8e-0933-8180-af65586c56df
 resourcetype: Document
 title: Homework 4
 uid: beaac21e-927f-c993-300e-cf81140196ba
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
+Problem set on parallel programming using the Message Passing Interface (MPI).
+
