--- a/content/resources/mit12_950iap10_hw5.md
+++ b/content/resources/mit12_950iap10_hw5.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Problem set on wave equation solvers and hybrid programming.
-file: /media/courses/12-950-parallel-programming-for-multicore-machines-using-openmp-and-mpi-january-iap-2010/c191fb9962416759450a9af8ac154725_MIT12_950IAP10_hw5.pdf
+file: /courses/12-950-parallel-programming-for-multicore-machines-using-openmp-and-mpi-january-iap-2010/c191fb9962416759450a9af8ac154725_MIT12_950IAP10_hw5.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
@@ -12,4 +12,10 @@ parent_uid: 1ab8d517-bb8e-0933-8180-af65586c56df
 resourcetype: Document
 title: Homework 5
 uid: c191fb99-6241-6759-450a-9af8ac154725
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
+Problem set on wave equation solvers and hybrid programming.
+
