--- a/content/resources/12-950iap10.md
+++ b/content/resources/12-950iap10.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: ''
   image-alt: Basic concept of MPI and OpenMP.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: Basic concept of MPI and OpenMP
@@ -18,4 +19,3 @@ video_metadata:
   youtube_id: null
 ---
 Mixed Parallel Programming using MPI and OpenMP. (Figure by MIT OpenCourseWare.)
-
