--- a/content/resources/mit12_950iap10_hw3.md
+++ b/content/resources/mit12_950iap10_hw3.md
@@ -6,6 +6,7 @@ file: /courses/12-950-parallel-programming-for-multicore-machines-using-openmp-a
 file_type: application/pdf
 learning_resource_types:
 - Assignments
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
@@ -19,4 +20,3 @@ video_metadata:
   youtube_id: null
 ---
 Problem set on parallel programming using the Message Passing Interface (MPI).
-
