Sync all content

--- a/content/resources/12-950iap10.md
+++ b/content/resources/12-950iap10.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: Mixed Parallel Programming using MPI and OpenMP. (Figure by MIT OpenCourseWare.)
 file: /courses/12-950-parallel-programming-for-multicore-machines-using-openmp-and-mpi-january-iap-2010/915021e454921b7e4798d22cf186dbb2_12-950iap10.jpg
+file_size: 31118
 file_type: image/jpeg
 image_metadata:
   caption: Mixed Parallel Programming using MPI and OpenMP. (Figure by MIT OpenCourseWare.)
