--- a/content/resources/12-950iap10-th.md
+++ b/content/resources/12-950iap10-th.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: Mixed Parallel Programming using MPI and OpenMP. (Figure by MIT OpenCourseWare.)
 file: /courses/12-950-parallel-programming-for-multicore-machines-using-openmp-and-mpi-january-iap-2010/784cbb4dd7c7c7e26b3eb2c03f1583d3_12-950iap10-th.jpg
+file_size: 8439
 file_type: image/jpeg
 image_metadata:
   caption: Mixed Parallel Programming using MPI and OpenMP. (Figure by MIT OpenCourseWare.)
