--- a/content/resources/mit12_950iap10_hw2.md
+++ b/content/resources/mit12_950iap10_hw2.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: Problem set on on OpenMP (Open Multi-Processing) coding.
 file: /courses/12-950-parallel-programming-for-multicore-machines-using-openmp-and-mpi-january-iap-2010/4a783f4997aec6c1b3983196359f393e_MIT12_950IAP10_hw2.pdf
+file_size: 106585
 file_type: application/pdf
 learning_resource_types:
 - Assignments
