--- a/content/resources/mit12_950iap10_hw4.md
+++ b/content/resources/mit12_950iap10_hw4.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Problem set on parallel programming using the Message Passing Interface
   (MPI).
 file: /courses/12-950-parallel-programming-for-multicore-machines-using-openmp-and-mpi-january-iap-2010/beaac21e927fc993300ecf81140196ba_MIT12_950IAP10_hw4.pdf
+file_size: 53774
 file_type: application/pdf
 learning_resource_types:
 - Assignments
